o  Fixed the maxent.jar implementation so that it correctly receives extra arguments like jacknife=TRUE or responsecurves=TRUE and produces the html and plot output. To use this, you need to set the path in the parameter "other.settings" -- see the new example in ?ENMevaluate.
o  Simplified the environmental similarity plotting by removing "most similar" and "most different" options -- these originate from an old function from a different package that is difficult to maintain over time, so we are now using predicts::mess only.
o  Now when model settings result in a model error for at least one fold during cross-validation, the validation statistics for these settings in the results table are all NA. Previously, the fold with the error was simply removed from the results.partitions table and summary statistics were calculated ignoring these folds. This is a much more cautious approach, as the failure of a model to complete for even one fold may mean those settings are not recommendable given the partition method chosen.
o  Fixed an issue that made the 'rm' field in the ENMevaluation results table a factor variable, potentially leading to change in the numbers when as.numeric() is used. Now this field is numeric type.
o  Added new save and load functions for ENMevaluation objects (saveENMevaluation, loadENMevaluation) that write and read .rds files. This was necessary because the terra pkg uses new wrap and unwrap functions to preserve file connections, and these new ENMeval functions do the wrapping and unwrapping automatically.