@@ -2,6 +2,7 @@ ENMeval 2.0.5
 ===========
 * This one is kind of a big update, making the switch to terra and predicts*
 o  Updated package and vignette to use terra and predicts functions instead of raster and dismo, which rely on deprecated pkgs sp, rgdal, and rgeos. This includes the multivariate environmental similarity functions originally from rmaxent and the RMM functionality. Thus, in place of dismo::maxent, we now use predicts::MaxEnt, and in place of dismo::bioclim we now use predicts::envelope. As the predict methods for these functions are not currently exported by the current version of the predicts pkg on CRAN, ENMeval currrently loads the predicts pkg when making model predictions for maxent.jar and BIOCLIM models, though this will be phased out once the predicts pkg updates. Please see README for a warning about using categorical predictors with predicts::MaxEnt.
+o  Removed doSNOW functionality because it is deprecated and replaced with a parallelization implementation from the parallel package. In doing so, also removed doParallel functions because they were not necessary. This means the parallelType argument is now gone, which simplifies things a bit, but it also means that parallel processes no longer have a progress bar, which only worked for doSNOW functions.
 o  Fixed the maxent.jar implementation so that it correctly receives extra arguments like jacknife=TRUE or responsecurves=TRUE and produces the html and plot output. To use this, you need to set the path in the parameter "other.settings" -- see the new example in ?ENMevaluate.
 o  Simplified the environmental similarity plotting by removing "most similar" and "most different" options -- these originate from an old function from a different package that is difficult to maintain over time, so we are now using predicts::mess only.
 o  Now when model settings result in a model error for at least one fold during cross-validation, the validation statistics for these settings in the results table are all NA. Previously, the fold with the error was simply removed from the results.partitions table and summary statistics were calculated ignoring these folds. This is a much more cautious approach, as the failure of a model to complete for even one fold may mean those settings are not recommendable given the partition method chosen.
